PlanExecutor & joins